--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "sails-socket",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "simple promise base socket for sails js",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard",
+	"build": "webpack --config ./webpack.config.js",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
